# LearnOpenGL

./: .gitmodules  CMakeLists.txt  CMakePresets.json  TODO  cmake-setup.bat  debug.bat
.cache/clangd/index/: 3DSConverter.cpp.790EC1326BE1A4DD.idx  3DSExporter.cpp.70BF318AAE60C8F1.idx  3DSExporter.h.8E5614BFD0E94177.idx  3DSHelper.h.89627F85CE4482AD.idx  3DSLoader.h.373F668B659E3CB5.idx  AMFImporter.hpp.3C992DC15BFE1C50.idx  AMFImporter_Node.hpp.6A3D3DB74771BA22.idx  AMFImporter_Postprocess.cpp.5C42A6F430396D84.idx  ASELoader.cpp.42A2AEC91636821B.idx  ASELoader.h.23C846967141E7EC.idx  ASEParser.h.F7D221FF618ACA22.idx  AbstractImportExportBase.cpp.8CA4BCC04732AF9F.idx  AbstractImportExportBase.h.66B2E4FA27EDC6E1.idx  ArmaturePopulate.cpp.77ED16F02AA42E83.idx  ArmaturePopulate.h.E1462D78B4A86EE5.idx  AssbinExporter.cpp.4C8E39FF37529F59.idx  AssbinFileWriter.h.749F7628AC87555A.idx  AssertHandler.h.E0B58AFBB19D6C1C.idx  Assimp.cpp.F5E2D9FC6D5D9729.idx  AssimpAPITest_aiMatrix3x3.cpp.47043B6DE853913E.idx  AssxmlExporter.cpp.7C1A6A0F16BA1D7C.idx  AssxmlFileWriter.h.D791861546F7B404.idx  BVHLoader.cpp.C3AABDF7D4DF2B25.idx  BVHLoader.h.32E894393EC3E2A6.idx  Base64.hpp.CB8047FCCA1373E8.idx  BaseImporter.cpp.A4FD46331AAB34D7.idx  BaseImporter.h.E522C067F30CE8E2.idx  BaseProcess.h.C1DA371CE9978F4D.idx  Bitmap.cpp.B673599FD677E9D1.idx  Bitmap.h.1947CEBC809EB376.idx  BlenderBMesh.h.934D53BB46C14F6B.idx  BlenderCustomData.cpp.F2D26249CD0C6BA5.idx  BlenderCustomData.h.4C569129245B78CE.idx  BlenderDNA.cpp.EB9311510DD8B53D.idx  BlenderDNA.h.D2A7874B46B513CC.idx  BlenderDNA.inl.79018B4FCABD42F1.idx  BlenderIntermediate.h.1C351CC037CE220C.idx  BlenderLoader.cpp.6A4F5E464B415030.idx  BlenderLoader.h.8F94AA8168EEAE01.idx  BlenderModifier.h.8B6D519B22B15BDF.idx  (+801 more)
src/demo/: camera.h  ch10.h  ch12.h  ch16.h  ch17.h  ch5.h  ch5_hello_triangle.h  ch6.h  ch7.h  ch8.h  ch9.h  chcommon.h  cube.h  ex10.h  lighting12-15.h  lighting12-18.h  main.cc  math.h  models.h  object.h  object_deprecated.h  objectv2.h  shader.h  texture.h  types.h
src/demo/shaders/ch14/: phong.fs  phong.vs
src/demo/shaders/ch16/: phong.dir.fs
src/demo/shaders/ch17/: container.fs  container.fsh  container.vs
src/demo/shaders/ch5/: ch5.fs
src/demo/shaders/ch6/: ch6.1.vs  ch6.2.vs  ch6.fs
src/demo/shaders/ch7/: ch7.fs  ch7.vs
src/demo/shaders/ch8/: ch8.fs  ch8.vs
src/demo/shaders/ch9/: ch9.fs  ch9.vs
src/demo/shaders/lighting/: ch12.fs  gouraud.fs  gouraud.vs  object.fs  phong.fs  vertex.vs
src/ext/glad/include/glad/: glad.h
src/ext/glad/src/: glad.c
